Fixed docker compose file and added sql file to create reports table.

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=mariadbcontainer;port=3306;database=obstacledb;user=root;password="
+    "DefaultConnection": "server=mariadbcontainer;port=3306;database=obstacledb;user=root;password=test123"
   },
   "AllowedHosts": "*"
 }
