--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
        - "5000:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=server=mariadbcontainer;port=3306;database=mysql;user=root;password=test123;
+      - ConnectionStrings__DefaultConnection=server=mariadbcontainer;port=3306;database=obstacledb;user=root;password=test123;
     networks:
       - appnet
 networks:
