oppdatert compose filen og lagt til en sql fil knyttet til db tabellen.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,45 @@
+version: "3.9"
+
 services:
   webapplication1:
-    image: ${DOCKER_REGISTRY-}webapplication1
     build:
       context: .
       dockerfile: WebApplication1/Dockerfile
+    container_name: obstacle-web
+    depends_on:
+      mariadb:
+        condition: service_healthy
     ports:
-       - "5000:8080"
+      - "5173:8080"  # appen åpnes på http://localhost:5000
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=server=mariadbcontainer;port=3306;database=obstacledb;user=root;password=test123;
-    networks:
-      - appnet
+      ASPNETCORE_ENVIRONMENT: "Development"
+      # Overstyrer appsettings.json
+      ConnectionStrings__DefaultConnection: "Server=mariadb;Port=3306;Database=obstacledb;User Id=appuser;Password=test123;"
+    networks: [appnet]
+
+  mariadb:
+    image: mariadb:11
+    container_name: mariadb
+    restart: unless-stopped
+    environment:
+      MARIADB_ROOT_PASSWORD: root123
+      MARIADB_DATABASE: obstacledb
+      MARIADB_USER: appuser
+      MARIADB_PASSWORD: test123
+    ports:
+      - "3306:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+      - ./db/init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
+    networks: [appnet]
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb-admin ping -uroot -p$${MARIADB_ROOT_PASSWORD} --host=127.0.0.1"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
 networks:
-    appnet: #Legge til appnet nettverket som er ekstern nettverk
-       external: true
-       name: appnet
+  appnet: {}   # internt nettverk, ikke lenger external
+
+volumes:
+  dbdata:
