--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
+  "ConnectionStrings": { //Gammel connection string, overstyres i docker-compose.
     "DefaultConnection": "server=mariadbcontainer;port=3306;database=obstacledb;user=root;password=test123"
   },
   "AllowedHosts": "*"
